[package]
name = "dkja-ssp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
indicatif = "0.17.8"
reqwest = {version = "0.11.26" }
console = "0.15.8"
tokio = { version = "1.36.0", features = ["full"] }
dotenv = "0.15.0"